Added validation constraints to SubjectRequestDTO and mapped subjects in Major entity