@@ -4,19 +4,15 @@ import lombok.RequiredArgsConstructor;
 import org.humanas.guia.dtos.SubjectRequestDTO;
 import org.humanas.guia.dtos.SubjectResponseDTO;
 import org.humanas.guia.dtos.SubjectYearDTO;
-import org.humanas.guia.entities.Major;
 import org.humanas.guia.entities.Subject;
 import org.humanas.guia.mappers.SubjectMapper;
-import org.humanas.guia.repositories.MajorRepository;
 import org.humanas.guia.repositories.SubjectRepository;
 import org.humanas.guia.services.SubjectService;
 import org.springframework.stereotype.Service;
-
 import java.time.Year;
 import java.util.ArrayList;
 import java.util.List;
 import java.util.Optional;
-import java.util.stream.Collectors;
 import java.util.stream.IntStream;
 
 
@@ -24,23 +20,15 @@ import java.util.stream.IntStream;
 @RequiredArgsConstructor
 public class SubjectServiceImpl implements SubjectService {
     private final SubjectRepository repository;
-    private final MajorRepository majorRepository;
 
     public List<Subject> getAllSubjects(){
         return this.repository.findAll();
     }
     @Override
     public SubjectResponseDTO save(SubjectRequestDTO requestDTO) {
-        List<Major> majors = majorRepository.findAllById(requestDTO.getMajorsIds());
-        Subject entityToSave = SubjectMapper.subjectRequestDTOToSubject(requestDTO, majors);
+        Subject entityToSave = SubjectMapper.subjectRequestDTOToSubject(requestDTO);
         Subject entitySaved = repository.save(entityToSave);
         return SubjectMapper.subjectToSubjectResponseDTO(entitySaved);
-    }
-
-    @Override
-    public List<SubjectResponseDTO> getSubjectsByMajorId(Long idMajor) {
-        List<Subject> subjects = repository.findAllByMajorsId(idMajor);
-        return SubjectMapper.subjectListToSubjectResponseDTOList(subjects);
     }
 
     public List<SubjectYearDTO> getAllYearsForSubject(Long idSubject){
@@ -54,7 +42,7 @@ public class SubjectServiceImpl implements SubjectService {
             // Generar la lista de años
             List<Integer> listaAnios = IntStream.rangeClosed(year, anioActual)
                     .boxed()
-                    .collect(Collectors.toList());
+                    .toList();
 
             for (Integer anio : listaAnios){
                 SubjectYearDTO sYD = new SubjectYearDTO(anio);
